--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Create env file
         run: |
           echo "DB_HOST=${{ secrets.DB_HOST }}" >> .env
-          echo "DB_USER=${{ secrets.DB_USER }}" >> .env
+          echo "DB_USERNAME=${{ secrets.DB_USER }}" >> .env
           echo "DB_PASSWORD=${{ secrets.DB_PASSWORD }}" >> .env
           echo "DB_DATABASE=${{ secrets.DB_DATABASE }}" >> .env
           echo "DB_PORT=${{ secrets.DB_PORT }}" >> .env
